--- a/Cloudbite/package.json
+++ b/Cloudbite/package.json
@@ -26,7 +26,8 @@
     "react-masonry-css": "^1.0.16",
     "react-range": "^1.10.0",
     "react-router-dom": "^7.5.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
